Nuevo entorno de trabajo.

--- a/src/clasico_a_cuantico.tex
+++ b/src/clasico_a_cuantico.tex
@@ -14,18 +14,18 @@ Matemáticamente se dice que una función es una onda si verifica la ecuación d
 \end{equation}
 donde $v$ es la velocidad de propagación de la perturbación.
 
-\subsection{\energialementos de una onda}\label{subsec:elementos-de-una-onda}
+\subsection{elementos de una onda}\label{subsec:elementos-de-una-onda}
 
 \begin{description}
-    \item[Cresta.] \energial punto de máxima separación con respecto de su posición de reposo.
-    \item[Valle.] \energial punto de máxima elongación de la onda, en sentido opuesto a la cresta.
+    \item[Cresta.] El punto de máxima separación con respecto de su posición de reposo.
+    \item[Valle.] El punto de máxima elongación de la onda, en sentido opuesto a la cresta.
     \item[Amplitud ($\amplitud$).] La distancia vertical desde una cresta hasta el punto de equilibrio.
     \item[Longitud de onda ($\longonda$).] La distancia entre dos crestas consecutivas.
     \item[Número de onda angular ($\longondaangular$).] La inversa de la longitud de onda en radianes.
-    \item[Periodo ($\periodo$).] \energial tiempo empleado en completar una longitud de onda.
-    \item[Frecuencia ($\frecuencia$).] \energial número de periodos por unidad de tiempo.
+    \item[Periodo ($\periodo$).] El tiempo empleado en completar una longitud de onda.
+    \item[Frecuencia ($\frecuencia$).] El número de periodos por unidad de tiempo.
     \item[Frecuencia angular ($\frecuenciaangular$).] La frecuencia en radianes por segundo.
-    \item[Fase ($\fase$).] \energial mínimo valor que hace cíclica la posición.
+    \item[Fase ($\fase$).] El mínimo valor que hace cíclica la posición.
     \item[Velocidad de fase ($v_f$).] La velocidad a la que se propaga el movimiento ondulatorio.
     \item[Velocidad de grupo ($v_g$).] La velocidad a la que se propaga las variaciones de la amplitud.
 \end{description}
@@ -39,7 +39,7 @@ Aplicando las definiciones anteriores, tenemos
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.6\textwidth]{sin}
-    \caption{\energialementos de una onda}
+    \caption{elementos de una onda}
     \label{fig:elementos-onda}
 \end{figure}
 
@@ -59,9 +59,9 @@ Pero la luz en una onda electro-magnética y como ya apreció Maxwell, el campo 
 
 \section{Dualidad onda-partícula de De Broglie}\label{sec:dualidad-onda-partícula-de-de-broglie}
 
-Si los fotones son partículas y ondas a la vez, podemos usar el postulado de la mecánica relativista de \energiainstein para partículas, y a la vez, el postulado de Planck para ondas.
+Si los fotones son partículas y ondas a la vez, podemos usar el postulado de la mecánica relativista de Einstein para partículas, y a la vez, el postulado de Planck para ondas.
 
-\begin{postulate}[Valor de la energía de las ecuaciones de \energiainstein]
+\begin{postulate}[Valor de la energía de las ecuaciones de Einstein]
     \begin{equation}
         \label{eq:energia-einstein}
         \energia=m{\speedoflightsymbol}^2=p\speedoflightsymbol
