--- a/src/main.tex
+++ b/src/main.tex
@@ -34,7 +34,7 @@
     \input{mecanica_hamiltoniana.tex}
     \input{clasico_a_cuantico.tex}
     \input{ecuación de Schrödinger.tex}
-
+    \input{probabilidad_cuantica.tex}
     %\input{espacios_de_hilbert.tex}
 
     %\input{matrices.tex}
